cmake_minimum_required(VERSION 2.8)

#project(item5)

set(BOOST_INCLUDE_DIRS "/usr/local/boost_1_57_0")
set(BIN_DIR ${CMAKE_SOURCE_DIR}/bin)

IF(NOT EXISTS ${BIN_DIR})
	FILE(MAKE_DIRECTORY ${BIN_DIR})
ENDIF(NOT EXISTS ${BIN_DIR})

#set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -g")
set(CMAKE_CXX_FLAGS "-std=c++1y ${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})

INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS}) 
ADD_EXECUTABLE(item5 src/main)
TARGET_LINK_LIBRARIES(item5)

ADD_EXECUTABLE(func src/func)
TARGET_LINK_LIBRARIES(func)

ADD_EXECUTABLE(auto_func src/auto_func)
TARGET_LINK_LIBRARIES(auto_func)

